--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -30,6 +30,9 @@
                  <div class="swiper-container-subnav multinav">
                     <div class="swiper-wrapper">
 			<div class="swiper-slide" style="background:#c8c8c8;">
+        <div class="subnav_header">
+          <span>Recent Stories</span>
+        </div>
 				<nav style="padding:0px;width:100%" class="main_nav_underline">
   				<ul style="width:100%">
 
@@ -54,17 +57,11 @@
 			</div>
 
 			<div class="swiper-slide">
-				<div class="subnav_header backtonav"><img src="{{{cdn}}}/mobili/images/icons/gray/back.png" alt="" title="" /><span>BACK TO MAIN MENU</span></div>
+				<div class="subnav_header backtonav"><img src="{{{cdn}}}/mobili/images/icons/gray/back.png" alt="Vertex 360" /><span>BACK TO MAIN MENU</span></div>
 				<nav class="main_nav_underline">
 				<ul>
 
-				<li><a href="shop.html"><img src="{{{cdn}}}/mobili/images/icons/gray/car.png" alt="" title="" /><span>Cars</span></a></li>
-				<li><a href="shop.html"><img src="{{{cdn}}}/mobili/images/icons/gray/bus.png" alt="" title="" /><span>Buses</span></a></li>
-				<li><a href="shop.html"><img src="{{{cdn}}}/mobili/images/icons/gray/bike.png" alt="" title="" /><span>Bikes</span></a></li>
-				<li><a href="shop.html"><img src="{{{cdn}}}/mobili/images/icons/gray/rocket.png" alt="" title="" /><span>Rockets</span></a></li>
-				<li><a href="shop.html"><img src="{{{cdn}}}/mobili/images/icons/gray/briefcase.png" alt="" title="" /><span>Accessories</span></a></li>
-				<li><a href="shop.html"><img src="{{{cdn}}}/mobili/images/icons/gray/gift.png" alt="" title="" /><span>Gifts</span></a></li>
-				<li class="subnav opensubsubnav"><img src="{{{cdn}}}/mobili/images/icons/gray/categories.png" alt="" title="" /><span>Third sublevel menu</span></li>
+				<li class="subnav opensubsubnav"><img src="{{{cdn}}}/mobili/images/icons/gray/categories.png" alt="Vertex 360" /><span>Third sublevel menu</span></li>
 				</ul>
 				</nav>
 			</div>
@@ -74,24 +71,16 @@
 
     <div class="panel panel-right panel-reveal">
       <div class="user_login_info">
+        <div style="padding:12px;background:#f9f9f9">
+          <h4 id="comment-title" style="margin-bottom:8px;padding:0px">This is a long title with multiple lines. This is a long title with multiple lines</h4>
+          <textarea style="margin-top:0px;width:92%;border:none;border-radius:0px;background:#fff" rows="4"></textarea>
+          <button style="border-radius:0px;border:none;background:#333;padding:6px;color:#fff;">Submit</button>
+        </div>
 
-                <div class="user_thumb">
+        <div>
+          This is the comments section
+        </div>
 
-                  <div class="user_details">
-                   <p>Welcome, <span>Nathalie</span></p>
-                  </div>
-                  <div class="user_avatar"><img src="{{{cdn}}}/mobili/images/avatar3.jpg" alt="" title="" /></div>
-                </div>
-
-                  <nav class="user-nav">
-                    <ul>
-                      <li><a href="features.html"><img src="{{{cdn}}}/mobili/images/icons/gray/settings.png" alt="" title="" /><span>Account Settings</span></a></li>
-                      <li><a href="features.html"><img src="{{{cdn}}}/mobili/images/icons/gray/briefcase.png" alt="" title="" /><span>My Account</span></a></li>
-                      <li><a href="features.html"><img src="{{{cdn}}}/mobili/images/icons/gray/message.png" alt="" title="" /><span>Messages</span><strong>12</strong></a></li>
-                      <li><a href="features.html"><img src="{{{cdn}}}/mobili/images/icons/gray/love.png" alt="" title="" /><span>Favorites</span><strong>5</strong></a></li>
-                      <li><a href="index.html"><img src="{{{cdn}}}/mobili/images/icons/gray/lock.png" alt="" title="" /><span>Logout</span></a></li>
-                    </ul>
-                  </nav>
       </div>
     </div>
 
@@ -104,11 +93,15 @@
 
 		<div style="background:#333;" class="navbar navbar--fixed navbar--fixed-top navbar--bg">
 			<div class="navbar__col navbar__col--icon navbar__col--icon-left">
-				<a id="btn-menu-toggle" href="#" data-panel="left" class="open-panel"><img src="{{{cdn}}}/mobili/images/icons/white/menu.png" alt="Vertex 360" title="" /></a>
+				<a id="btn-menu-toggle" href="#" data-panel="left" class="open-panel"><img src="{{{cdn}}}/mobili/images/icons/white/menu.png" alt="Vertex 360" /></a>
 			</div>
       <div class="navbar__col navbar__col--title" style="text-align:center">
-				<a href="/"><img style="width:140px;margin-top:6px;margin-right:32px" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s280" /></a>
+				<a href="/"><img style="width:140px;margin-top:6px" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s280" /></a>
 			</div>
+      <div class="navbar__col navbar__col--icon navbar__col--icon-right">
+				<a id="btn-nav-comments" href="#" data-panel="right" class="open-panel"><img src="{{{cdn}}}/mobili/images/icons/white/message.png" alt="Vertex 360" /></a>
+			</div>
+
     </div>
 
      <div id="pages_maincontent">
@@ -143,7 +136,7 @@
                 </div>
             </div>
             <div class="close_popup_button">
-                <a href="#" class="close-popup" data-popup=".popup-login"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="" title="" /></a>
+                <a href="#" class="close-popup" data-popup=".popup-login"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="Vertex 360" /></a>
             </div>
         </div>
     </div>
@@ -159,36 +152,13 @@
                     <input type="password" name="Password" value="" class="form_input required" placeholder="Password" />
                     <input type="submit" name="submit" class="form_submit" id="submitregister" value="SIGN UP" />
                 </form>
-		<h5>- OR REGISTER WITH A SOCIAL ACCOUNT -</h5>
-		<div class="signup_social">
-			<a href="http://www.facebook.com/" class="signup_facebook">FACEBOOK</a>
-			<a href="http://www.twitter.com/" class="signup_twitter">TWITTER</a>
-		</div>
             </div>
             <div class="close_popup_button">
-                <a href="#" class="close-popup" data-popup=".popup-signup"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="" title="" /></a>
+                <a href="#" class="close-popup" data-popup=".popup-signup"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="Vertex 360" /></a>
             </div>
         </div>
     </div>
 
-    <!-- Forgot Password Popup -->
-    <div class="popup popup-forgot">
-        <div class="content-block">
-            <h4>FORGOT PASSWORD</h4>
-            <div class="loginform">
-                <form id="ForgotForm" method="post">
-                    <input type="text" name="Email" value="" class="form_input required" placeholder="email" />
-                    <input type="submit" name="submit" class="form_submit" id="submitforgot" value="RESEND PASSWORD" />
-                </form>
-                <div class="signup_bottom">
-                    <p>Check your email and follow the instructions to reset your password.</p>
-                </div>
-            </div>
-            <div class="close_popup_button">
-                <a href="#" class="close-popup" data-popup=".popup-forgot"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="" title="" /></a>
-            </div>
-        </div>
-    </div>
 
     <!-- Social Icons Popup -->
     <div class="popup popup-social">
@@ -196,14 +166,14 @@
       <h4>Social Share</h4>
       <p>Share icons solution that allows you share and increase your social popularity.</p>
       <ul class="social_share">
-      <li><a href="http://twitter.com/"><img src="{{{cdn}}}/mobili/images/icons/black/twitter.png" alt="" title="" /><span>TWITTER</span></a></li>
-      <li><a href="http://www.facebook.com/"><img src="{{{cdn}}}/mobili/images/icons/black/facebook.png" alt="" title="" /><span>FACEBOOK</span></a></li>
-      <li><a href="http://plus.google.com"><img src="{{{cdn}}}/mobili/images/icons/black/gplus.png" alt="" title="" /><span>GOOGLE</span></a></li>
-      <li><a href="http://www.dribbble.com/"><img src="{{{cdn}}}/mobili/images/icons/black/dribbble.png" alt="" title="" /><span>DRIBBBLE</span></a></li>
-      <li><a href="http://www.linkedin.com/"><img src="{{{cdn}}}/mobili/images/icons/black/linkedin.png" alt="" title="" /><span>LINKEDIN</span></a></li>
-      <li><a href="http://www.pinterest.com/"><img src="{{{cdn}}}/mobili/images/icons/black/pinterest.png" alt="" title="" /><span>PINTEREST</span></a></li>
+      <li><a href="http://twitter.com/"><img src="{{{cdn}}}/mobili/images/icons/black/twitter.png" alt="Vertex 360" /><span>TWITTER</span></a></li>
+      <li><a href="http://www.facebook.com/"><img src="{{{cdn}}}/mobili/images/icons/black/facebook.png" alt="Vertex 360" /><span>FACEBOOK</span></a></li>
+      <li><a href="http://plus.google.com"><img src="{{{cdn}}}/mobili/images/icons/black/gplus.png" alt="Vertex 360" /><span>GOOGLE</span></a></li>
+      <li><a href="http://www.dribbble.com/"><img src="{{{cdn}}}/mobili/images/icons/black/dribbble.png" alt="Vertex 360" /><span>DRIBBBLE</span></a></li>
+      <li><a href="http://www.linkedin.com/"><img src="{{{cdn}}}/mobili/images/icons/black/linkedin.png" alt="Vertex 360" /><span>LINKEDIN</span></a></li>
+      <li><a href="http://www.pinterest.com/"><img src="{{{cdn}}}/mobili/images/icons/black/pinterest.png" alt="Vertex 360" /><span>PINTEREST</span></a></li>
       </ul>
-      <div class="close_popup_button"><a href="#" class="close-popup" data-popup=".popup-social"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="" title="" /></a></div>
+      <div class="close_popup_button"><a href="#" class="close-popup" data-popup=".popup-social"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="Vertex 360" /></a></div>
     </div>
     </div>
 
@@ -217,6 +187,7 @@
 
     <script>
       (function(){
+        Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
         var data = window.__PRELOADED__
         var query = data.query // object
         var threads = data.threads // array
@@ -295,6 +266,14 @@
           }, 200)
         }
 
+        $('#btn-nav-comments').click(function(e){
+          var selectedThread = threads[selectedIndex]
+          if (selectedThread==null)
+            return
+
+          $('#comment-title').html(selectedThread.subject.title)
+        })
+
         reloadUI()
 
         if (showSidebar==false)
@@ -307,5 +286,6 @@
 
       })()
     </script>
+
   </body>
 </html>
