--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -72,7 +72,7 @@
     <div class="panel panel-right panel-reveal">
       <div class="user_login_info">
         <div style="padding:12px;background:#f9f9f9">
-          <h4 id="comment-title" style="margin-bottom:8px;padding:0px">This is a long title with multiple lines. This is a long title with multiple lines</h4>
+          <h4 id="comment-title" style="margin-bottom:8px;padding:0px"></h4>
           <textarea style="margin-top:0px;width:92%;border:none;border-radius:0px;background:#fff" rows="4"></textarea>
           <button style="border-radius:0px;border:none;background:#333;padding:6px;color:#fff;">Submit</button>
         </div>
@@ -261,9 +261,9 @@
           var url = 'https://'+selectedThread.site.slug+'.vertex360.co/post/'+selectedThread.subject.slug
           $('#entity-content-iframe').attr('src', url)
           setTimeout(function(){
-            $('#comment-title').html(selectedThread.subject.title)
             setActive(selectedThread.id)
             connectSidebar()
+            $('#comment-title').html(selectedThread.subject.title)
           }, 200)
         }
 
