--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -210,7 +210,7 @@
           }
 
           console.log('TEST 2')
-          $('#comment-title').html(selectedThread.subject.title)
+          $('#comment-title').text(selectedThread.subject.title)
         }
 
         var setActive = function(id){
