console log test

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -200,8 +200,8 @@
             return
           }
 
-          console.log('TEST 2')
           var header = '<h4 style="margin-bottom:8px;padding:0px">'+selectedThread.subject.title+'</h4>'
+          console.log('TEST 2: ' + header)
           $('#comment-header').html(header)
         }
 
