--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -236,6 +236,7 @@
               $('#loading-container').css('display', '')
               $('#entity-content-iframe').css('display', 'none')
 
+              selectedIndex = i
               var threadId = $(this).attr('id')
               var thread = threadsMap[threadId]
               setActive(threadId)
