comment area styling

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -30,7 +30,7 @@
                  <div class="swiper-container-subnav multinav">
                     <div class="swiper-wrapper">
 			<div class="swiper-slide" style="background:#c8c8c8;">
-        <div class="subnav_header">
+        <div class="subnav_header" style="border-bottom:1px solid #ddd">
           <span>Recent Stories</span>
         </div>
 				<nav style="width:100%;background:#f1f7f8;padding:0px !important;" class="main_nav_underline">
@@ -64,8 +64,8 @@
       <div class="user_login_info">
         <div style="padding:12px;background:#f9f9f9">
           <div id="comment-header"></div>
-          <textarea style="margin-top:0px;width:92%;border:none;border-radius:0px;background:#fff" rows="4"></textarea>
-          <button style="border-radius:0px;border:none;background:#333;padding:6px;color:#fff;">Submit</button>
+          <textarea style="margin-top:0px;width:100%;border:none;border-radius:0px;background:#fff" rows="4"></textarea>
+          <button style="width:100%;border-radius:0px;border:none;background:#43603e;padding:9px;color:#fff;">Submit</button>
         </div>
 
         <div>
