--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -32,6 +32,14 @@
 			<div class="swiper-slide" style="background:#c8c8c8;">
         <div class="subnav_header" style="border-bottom:1px solid #ddd">
           <span>Recent Stories</span>
+          <select style="float:right;margin-top:8px">
+            <option value="news">News</option>
+            <option value="culture">Culture</option>
+            <option value="politics">Politics</option>
+            <option value="tech">Tech</option>
+            <option value="entertainment">Entertainment</option>
+            <option value="sports">Sports</option>
+          </select>
         </div>
 				<nav style="width:100%;background:#f1f7f8;padding:0px !important;" class="main_nav_underline">
   				<ul style="width:100%">
