--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -214,6 +214,10 @@
 
         $('#category-select').change(function(e){
           console.log('Category Selected: ' + e.target.value)
+          var viewportmeta = document.querySelector('meta[name="viewport"]')
+
+          viewportmeta.setAttribute('content', "initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0")
+          console.log(document.querySelector('meta[name="viewport"]'))
         })
 
         var setActive = function(id){
