--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -216,7 +216,7 @@
           console.log('Category Selected: ' + e.target.value)
           var viewportmeta = document.querySelector('meta[name="viewport"]')
 
-          viewportmeta.setAttribute('content', "initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0")
+          viewportmeta.setAttribute('content', "width=device-width, initial-scale=0")
           console.log(document.querySelector('meta[name="viewport"]'))
         })
 
