--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -289,6 +289,15 @@
           if (selectedThread==null)
             return
 
+          console.log('Fetch Comments: ' + JSON.stringify(selectedThread))
+          window.vertexLib.getRequest('/api/comment?thread='+selectedThread.id, null, function(err, resp){
+            if (err){
+              console.log('ERR: ' + JSON.stringify(err))
+              return
+            }
+
+            console.log(JSON.stringify(resp))
+          })
         })
 
         reloadUI()
