--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -19,7 +19,6 @@
     .selected {
       background:#fff;
     }
-
   </style>
 </head>
 
@@ -77,7 +76,7 @@
           <button style="width:100%;border-radius:0px;border:none;background:#43603e;padding:9px;color:#fff;">Submit</button>
         </div>
 
-        <div>
+        <div id="comments-container">
           This is the comments section
         </div>
 
@@ -177,6 +176,13 @@
     </div>
     </div>
 
+    <script type="text/template" id="tpl-comment">
+      <div style="display:flex;padding:12px">
+        <img style="width:64px;height:64px;max-width:100%;margin-right:12px;border-radius:4px" src="<%{profile.image}%>=s64-c" alt="Vertex 360" />
+      </div>
+      <p style="font-size:12px;text-align:right;"><% text %></p>
+    </script>
+
     <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
     <script type="text/javascript" src="{{{cdn}}}/scripts/vertex-lib.js"></script>
     <script type="text/javascript" src="{{{cdn}}}/js/mustache.js"></script>
@@ -194,6 +200,7 @@
         var threadsMap = data.threadsMap // object
         var selectedIndex = data.selectedIndex // number
         var showSidebar = data.showSidebar
+        var comments = []
         var isLoading = false
 
         var iframe = document.getElementById('entity-content-iframe')
@@ -296,7 +303,21 @@
               return
             }
 
-            console.log(JSON.stringify(resp))
+            if (resp.confirmation != 'success'){
+              console.log('FAIL: ' + resp.message)
+              return
+            }
+
+            comments = resp.results
+            console.log(JSON.stringify(comments))
+
+            var commentTpl = $('#tpl-comment').html()
+            var commentsHtml = ''
+            comments.forEach(function(comment){
+              commentsHtml += Mustache.render(commentTpl, comment)
+            })
+
+            $('#comments-container').html(commentsHtml)
           })
         })
 
