--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -76,10 +76,7 @@
           <button style="width:100%;border-radius:0px;border:none;background:#43603e;padding:9px;color:#fff;">Submit</button>
         </div>
 
-        <div id="comments-container">
-          This is the comments section
-        </div>
-
+        <div id="comments-container"></div>
       </div>
     </div>
 
@@ -177,10 +174,8 @@
     </div>
 
     <script type="text/template" id="tpl-comment">
-      <div style="display:flex;padding:12px">
-        <img style="width:64px;height:64px;max-width:100%;margin-right:12px;border-radius:4px" src="<%{profile.image}%>=s64-c" alt="Vertex 360" />
-      </div>
-      <p style="font-size:12px;text-align:right;"><% text %></p>
+      <img style="float:left;width:32px;height:32px;margin-right:12px;border-radius:4px" src="<%{profile.image}%>=s64-c" alt="Vertex 360" />
+      <p style="font-size:12px;padding:12px"><%{text}%></p>
     </script>
 
     <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
