--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -174,8 +174,10 @@
     </div>
 
     <script type="text/template" id="tpl-comment">
-      <img style="width:32px;height:32px;margin-right:12px;border-radius:4px" src="<%{profile.image}%>=s64-c" alt="Vertex 360" />
-      <p style="font-size:12px;padding:12px"><%{text}%></p>
+      <div style="padding:12px">
+        <img style="width:24px;height:24px;margin-right:12px;border-radius:50%" src="<%{profile.image}%>=s48-c" alt="Vertex 360" />
+      </div>
+      <p style="font-size:12px;padding:0px 12px"><%{text}%></p>
     </script>
 
     <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
