comment box styling

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -175,11 +175,11 @@
 
     <script type="text/template" id="tpl-comment">
       <div style="border-bottom:1px solid #ededed">
+        <p style="font-size:14px;padding:0px 12px 12px"><%{text}%></p>
         <div style="padding:12px 12px 6px 12px;text-align:right">
-          <small style="font-size:12px"><% profile.username %></small>
+          <small style="font-size:12px;margin-bottom:12px;vertical-align:middle;display:inline-block"><% profile.username %></small>
           <img style="width:24px;height:24px;margin-left:6px;border-radius:50%" src="<%{profile.image}%>=s48-c" alt="Vertex 360" />
         </div>
-        <p style="font-size:14px;padding:0px 12px 12px"><%{text}%></p>
       </div>
     </script>
 
