--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -175,7 +175,7 @@
 
     <script type="text/template" id="tpl-comment">
       <div style="border-bottom:1px solid #ededed">
-        <p style="font-size:16px;color:#000;padding:12px 12px 0px"><%{text}%></p>
+        <p style="font-size:15px;line-height: 1.5;color:#000;padding:12px 12px 0px"><%{text}%></p>
         <div style="padding:0px 12px 6px 12px;text-align:right">
           <small style="font-size:12px;margin-bottom:12px;vertical-align:middle;display:inline-block"><% profile.username %></small>
           <img style="width:24px;height:24px;margin-left:6px;border-radius:50%" src="<%{profile.image}%>=s48-c" alt="Vertex 360" />
