min-height for comments

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -76,7 +76,7 @@
           <button style="width:100%;border-radius:0px;border:none;background:#43603e;padding:9px;color:#fff;">Submit</button>
         </div>
 
-        <div id="comments-container"></div>
+        <div id="comments-container" style="min-height:150vh"></div>
       </div>
     </div>
 
