--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -73,7 +73,7 @@
         <div style="padding:12px;background:#f9f9f9">
           <div id="comment-header"></div>
           <textarea style="margin-top:0px;width:100%;border:none;border-radius:0px;background:#fff" rows="4"></textarea>
-          <button style="width:100%;border-radius:0px;border:none;background:#43603e;padding:9px;color:#fff;">Submit</button>
+          <button data-popup=".popup-signup" class="open-popup" style="width:100%;border-radius:0px;border:none;background:#43603e;padding:9px;color:#fff;">Submit</button>
         </div>
 
         <div id="comments-container" style="min-height:150vh"></div>
@@ -115,27 +115,6 @@
          </div>
     </div>
 
-    <!-- Login Popup -->
-    <div class="popup popup-login">
-        <div class="content-block">
-            <h4>LOGIN</h4>
-            <div class="loginform">
-                <form id="LoginForm" method="post">
-                    <input type="text" name="Username" value="" class="form_input required" placeholder="username" />
-                    <input type="password" name="Password" value="" class="form_input required" placeholder="password" />
-                    <div class="forgot_pass"><a href="#" data-popup=".popup-forgot" class="open-popup">Forgot Password?</a></div>
-                    <input type="submit" name="submit" class="form_submit" id="submit" value="SIGN IN" />
-                </form>
-                <div class="signup_bottom">
-                    <p>Don't have an account?</p>
-                    <a href="#" data-popup=".popup-signup" class="open-popup">SIGN UP</a>
-                </div>
-            </div>
-            <div class="close_popup_button">
-                <a href="#" class="close-popup" data-popup=".popup-login"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="Vertex 360" /></a>
-            </div>
-        </div>
-    </div>
 
     <!-- Register Popup -->
     <div class="popup popup-signup">
@@ -143,12 +122,22 @@
             <h4>REGISTER</h4>
             <div class="loginform">
                 <form id="RegisterForm" method="post">
-                    <input type="text" name="Username" value="" class="form_input required" placeholder="Username" />
                     <input type="text" name="Email" value="" class="form_input required" placeholder="Email" />
                     <input type="password" name="Password" value="" class="form_input required" placeholder="Password" />
                     <input type="submit" name="submit" class="form_submit" id="submitregister" value="SIGN UP" />
                 </form>
+                <p style="margin-top:6px">Already have an account?  <a href="#" style="color:red">LOGIN</a></p>
             </div>
+            <h5>- OR REGISTER WITH A SOCIAL ACCOUNT -</h5>
+            <div class="signup_social">
+            			<a href="http://www.facebook.com/" class="signup_facebook">FACEBOOK</a>
+            			<a href="http://www.google.com/" class="signup_google">GOOGLE</a>
+            </div>
+            <br />
+            <div style="text-align:center">
+              <img style="width:160px;margin-top:48px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+            </div>
+
             <div class="close_popup_button">
                 <a href="#" class="close-popup" data-popup=".popup-signup"><img src="{{{cdn}}}/mobili/images/icons/black/menu_close.png" alt="Vertex 360" /></a>
             </div>
