--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -121,21 +121,24 @@
         <div class="content-block">
             <h4>REGISTER</h4>
             <div class="loginform">
-                <form id="RegisterForm" method="post">
-                    <input type="text" name="Email" value="" class="form_input required" placeholder="Email" />
-                    <input type="password" name="Password" value="" class="form_input required" placeholder="Password" />
-                    <input type="submit" name="submit" class="form_submit" id="submitregister" value="SIGN UP" />
+                <form method="post" style="margin-bottom:4px">
+                    <input id="auth-email" type="text" name="Email" value="" class="form_input required" placeholder="Email" />
+                    <input id="auth-password" type="password" name="Password" value="" class="form_input required" placeholder="Password" />
+                    <button style="background:#43603e;width:100%;padding:16px;border:none;color:#fff;font-size:18px" id="auth-submit" type="submit" class="form_submit" />SIGN UP</button>
                 </form>
-                <p style="margin-top:6px">Already have an account?  <a href="#" style="color:red">LOGIN</a></p>
+                <div style="text-align:center">
+                  <span id="toggle-auth-text" style="margin-top:6px">Already have an account?</span>
+                  <a href="#" id="btn-toggle-auth-mode" style="color:red">LOGIN HERE</a>
+                </div>
             </div>
             <h5>- OR REGISTER WITH A SOCIAL ACCOUNT -</h5>
             <div class="signup_social">
-            			<a href="http://www.facebook.com/" class="signup_facebook">FACEBOOK</a>
-            			<a href="http://www.google.com/" class="signup_google">GOOGLE</a>
+        			<a href="http://www.facebook.com/" class="signup_facebook">FACEBOOK</a>
+        			<a href="http://www.google.com/" class="signup_google">GOOGLE</a>
             </div>
             <br />
             <div style="text-align:center">
-              <img style="width:160px;margin-top:48px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+              <img style="width:160px;margin-top:64px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
             </div>
 
             <div class="close_popup_button">
@@ -179,6 +182,29 @@
     <script type="text/javascript" src="{{{cdn}}}/mobili/js/jquery.validate.min.js" ></script>
     <script type="text/javascript" src="{{{cdn}}}/mobili/js/swiper.min.js"></script>
     <script type="text/javascript" src="{{{cdn}}}/mobili/js/jquery.custom.js"></script>
+    <script>
+      (function(){
+        var data = window.__PRELOADED__
+        var authMode = 'register'
+
+        $('#btn-toggle-auth-mode').click(function(e){
+          if (e)
+            e.preventDefault()
+
+          authMode = (authMode=='login') ? 'register' : 'login'
+          if (authMode == 'login'){
+            $('#auth-submit').html('LOGIN')
+            $('#toggle-auth-text').html('Don\'t have an account?')
+            $('#btn-toggle-auth-mode').html('REGISTER HERE')
+            return
+          }
+
+          $('#auth-submit').html('SIGN UP')
+          $('#toggle-auth-text').html('Already have an account?')
+          $('#btn-toggle-auth-mode').html('LOGIN HERE')
+        })
+      })()
+    </script>
 
     <script>
       (function(){
