comment out console log

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -295,7 +295,7 @@
               var threadId = $(this).attr('id')
               var thread = threadsMap[threadId]
               setActive(threadId)
-              console.log('Select Entity: ' + JSON.stringify(thread))
+              // console.log('Select Entity: ' + JSON.stringify(thread))
 
               var site = thread.site
               var url = 'https://'+site.slug+'.vertex360.co/post/'+thread.subject.slug
