apple touch icon

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <link rel="apple-touch-icon" href="{{{cdn}}}/mobili/images/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/aUXZ1b7hGztCkTopbn0ygH9GM6dkD6PNR3VdCdkwWSg8VwgzLFlF6id8boz-QNYciAOkrjBGLfO1jbszPnP4nxtA" />
   <link rel="apple-touch-startup-image" href="{{{cdn}}}/mobili/images/apple-touch-startup-image-640x920.png">
   <title>Vertex 360</title>
   <meta name="description" content="{{meta.description}}" />
