--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -69,10 +69,11 @@
     </div>
 
     <div class="panel panel-right panel-reveal">
-      <div class="user_login_info">
+      <div class="user_login_info" style="background:#c8c8c8;border-left:1px solid #ddd">
         <div style="padding:12px;background:#f9f9f9">
           <div id="comment-header"></div>
           <textarea style="margin-top:0px;width:100%;border:none;border-radius:0px;background:#fff" rows="4"></textarea>
+          <div style="background:#fff;padding:8px">username</div>
           <button data-popup=".popup-signup" class="open-popup" style="width:100%;border-radius:0px;border:none;background:#43603e;padding:9px;color:#fff;">Submit</button>
         </div>
 
